src/objects/QuestionnaireSet__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoNoGoDate__c</fullName>
        <description>The date in which the go/no go was approved or rejected.</description>
        <label>Go/No Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoNoGoRecommendation__c</fullName>
        <label>Go / No Go Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoNoGo_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Go/No Go Review</label>
        <referenceTo>ProjectReview__c</referenceTo>
        <relationshipLabel>Risk and Market Assessments</relationshipLabel>
        <relationshipName>Risk_and_Market_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InitiateNextApprovalProcess__c</fullName>
        <label>Initiate Next Approval Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicingClient__c</fullName>
        <formula>Project__r.DefaultTopTaskCustomer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoicing Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <formula>IF(AND(UnansweredQuestionCount__c == 0,  TotalQuestions__c != 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeetingNotes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PnLManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RiskandMarketAssessmentsPnLManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RiskandMarketAssessmentsProjectApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLongName__c</fullName>
        <formula>Project__r.ProjectLongName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RiskandMarketAssessmentsPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Risk and Market Assessments</relationshipLabel>
        <relationshipName>QuestionnaireSet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RM_Button_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Internal Logic Calculation</description>
        <label>RM Button Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonForVariance__c</fullName>
        <label>Reason for Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestedProjectCategory__c</fullName>
        <label>Requested Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>C-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalQuestions__c</fullName>
        <label>Total Questions</label>
        <summaryForeignKey>Questionnaire__c.QuestionnaireSet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UnansweredQuestionCount__c</fullName>
        <label>Unanswered Question Count</label>
        <summarizedField>Questionnaire__c.TotalUnanswered__c</summarizedField>
        <summaryForeignKey>Questionnaire__c.QuestionnaireSet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Risk and Market Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk and Market Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>